breeze (4:5.3.2-3~) UNRELEASED; urgency=medium

  * Add a symlink for kde-style-breeze-qt4 in the qt4 plugins dirs.
    (Closes: #792119)

 -- Maximiliano Curia <maxy@debian.org>  Mon, 13 Jul 2015 10:33:37 +0200

breeze (4:5.3.2-2) unstable; urgency=medium

  * Improve Recommends.

 -- Maximiliano Curia <maxy@debian.org>  Thu, 02 Jul 2015 13:37:36 +0200

breeze (4:5.3.2-1) unstable; urgency=medium

  * New upstream release (5.3.0).
  * New upstream release (5.3.1).
  * New upstream release (5.3.2).
  * Update copyright information.

 -- Maximiliano Curia <maxy@debian.org>  Wed, 01 Jul 2015 12:21:01 +0200

breeze (4:5.3.1-0ubuntu1) wily; urgency=medium

  [ Jonathan Riddell ]
  * Plasma 5.3 beta
  * new upstream release

 -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 05 Jun 2015 02:20:12 +0200

breeze (4:5.2.2-0ubuntu3) vivid; urgency=medium

  * Make sure we assign a different priority to secondary cursor themes

 -- Harald Sitter <sitter@kde.org>  Mon, 30 Mar 2015 13:30:40 +0200

breeze (4:5.2.2-0ubuntu2) vivid; urgency=medium

  * Revise postinst and prerm for cursor themes. The themes now
    get inheritance configs created that we use for the default symlink which
    should make the default setup work as expected.

 -- Harald Sitter <sitter@kde.org>  Mon, 30 Mar 2015 12:59:09 +0200

breeze (4:5.2.2-1) experimental; urgency=medium

  * Team upload.
  * New upstream release (5.2.2).

  [ Felix Geyer ]
  * Improve the copyright file.
  * Turn breeze-cursor-theme and breeze-icon-theme into arch-all packages.

 -- Felix Geyer <fgeyer@debian.org>  Tue, 16 Jun 2015 18:52:55 +0200

breeze (4:5.2.2-0ubuntu1) vivid; urgency=medium

  [ Scarlett Clark ]
  * New upstream release
  * Remove upstream applied patch upstream_gtktheme-setup.diff
  * Add new dep to libkf5iconthemes-dev (>= 5.2.2)
  * wrap-and-sort
  * Remove missing files.

  [ Harald Sitter ]
  * Add postinst and prerm for breeze-cursor-theme setting it as the default
    cursor theme
