@@ -19,8 +19,14 @@ override_dh_auto_build:
 override_dh_auto_install:
 	$(overridden_command)
 	$(overridden_command) --builddirectory=build-qt4
+
+override_dh_install:
+	dh_install
 	mkdir -p debian/kde-style-breeze-qt4/usr/lib/$(DEB_HOST_MULTIARCH)/qt4/plugins/styles/
-	ln -s /usr/lib/kde4/plugins/styles/breeze.so debian/kde-style-breeze-qt4/usr/lib/$(DEB_HOST_MULTIARCH)/qt4/plugins/styles/
+	mv debian/kde-style-breeze-qt4/usr/lib/kde4/plugins/styles/breeze.so \
+	    debian/kde-style-breeze-qt4/usr/lib/$(DEB_HOST_MULTIARCH)/qt4/plugins/styles/
+	rmdir debian/kde-style-breeze-qt4/usr/lib/kde4/plugins/styles \
+	    debian/kde-style-breeze-qt4/usr/lib/kde4/plugins
 
 override_dh_strip:
 	$(overridden_command) --dbg-package=breeze-dbg
